@@ -362,6 +362,30 @@ Short(s): \n\r\
 Toggles whether the room descriptions are shown as you move around. \
 See also the COMPRESS command.
 	
+NOCHANNEL=\
+Command : NO[CHANNEL]\n\r\
+Usage   : NO[CHANNEL]\n\r\
+Example : no[channel]\n\r\
+Short(s): \n\r\
+This command turns off the [CHANNEL] channel.  See [CHANNEL] for more info.
+
+CHANNEL=\
+Command : [CHANNEL]\n\r\
+Usage   : [CHANNEL] ,[SOCIAL] ([TARGET])/LAST [NUMBER]/[MESSAGE]\n\r\
+Example : [channel] hello everyone!\n\r\
+Example : [channel] ,smile bob\n\r\
+Example : [channel] ,does a high five!\n\r\
+Example : [channel] last 30\n\r\
+Short(s): \n\r\
+This command is for global communication with all users online. \
+The parameter is a simple message to send to everyone online. You can use \
+a comma and a social name to use a social over the channel.  You can use \
+a comma and an emote string to emote over the channel.  The "LAST" command \
+can be used to view previous messages you may have missed.  Use the \
+NO[CHANNEL] command to silence this channel and turn if off for you.  When \
+turned off [CHANNEL] can turn it on again.[EXTRA]\n\r\
+See also: CHANNELS, SOCIALS
+
 CHANNELS=\
 Command : CHANNELS\n\r\
 Usage   : CHANNELS\n\r\
@@ -600,14 +624,6 @@ and then whether a fight with such a creature is wise, or just \
 a waste of time.  This command will also tell you if you have any \
 skills that might be helpful to the item or character. \
 See also HELP GCONSIDER.
-
-CHAT=\
-Command : CHAT\n\r\
-Usage   : CHAT [MESSAGE]\n\r\
-Example : chat yo fellas\n\r\
-Short(s): \n\r\
-One of the numerous CHANNELS that can be used to communicate with \
-all of the users online.  
 
 CRAWL=\
 Command : CRAWL\n\r\
@@ -1059,33 +1075,6 @@ Example : show all Gunther\n\r\
 Short(s): \n\r\
 Shows an item from your carried inventory to another MOB.
 
-GOSSIP=\
-Command : GOSSIP\n\r\
-Usage   : GOSSIP [MESSAGE] (LAST [NUMBER])\n\r\
-Example : gossip I just found a great sword everyone!\n\r\
-Example : gossip last 10\n\r\
-Example : gossip ,smile\n\r\
-Example : gossip :smile Bob\n\r\
-Short(s): \n\r\
-One of the numerous CHANNELS that can be used to communicate with \
-all of the users online.  Use the last [NUMBER UP TO 10] parameter to \
-view the log of channel messages.  Use the , or : prefix to do an emote \
-or use a social inside your channel message.
-
-GRATZ=\
-Command : GRATZ\n\r\
-Usage   : GRATZ [MESSAGE] (LAST [NUMBER])\n\r\
-Example : gratz Great job Bilbo!\n\r\
-Example : gratz last 10\n\r\
-Example : gratz ,smile\n\r\
-Example : gratz :smile Bob\n\r\
-Short(s): \n\r\
-One of the numerous CHANNELS that can be used to communicate with \
-all of the users online.    Use the last [NUMBER UP TO 10] parameter to \
-view the log of channel messages.  Use the , or : prefix to do an emote \
-or use a social inside your channel message.
-
-
 GROUP=\
 Command : GROUP\n\r\
 Usage   : GROUP\n\r\
@@ -1173,18 +1162,6 @@ This command allows the player to add or remove names from his or her \
 ignored players list.  The ignored list consists of some number of other players \
 by name.  A player will never receive channel messages from players on this \
 list, nor will they receive any TELL messages from players on this list.
-
-INFO=\
-Command : INFO\n\r\
-Short(s): \n\r\
-The automatic information channel. Turned off with NOINFO
-
-NOINFO=\
-Command : NOINFO\n\r\
-Usage   : NOINFO\n\r\
-Example : noinfo\n\r\
-Short(s): \n\r\
-Turn off the automatic information channel.
 
 INVENTORY=\
 Command : INVENTORY\n\r\
@@ -1405,30 +1382,6 @@ When used without a parameter, this command toggles whether or not your \
 character will accept new followers.  When a name is specified, this command causes \
 a follower of that name to no longer follow you.  \
 See also REBUKE, GROUP, FOLLOW, FORMATION, ORDER, and GTELL.
-
-NOGRATZ=\
-Command : NOGRATZ\n\r\
-Usage   : NOGRATZ\n\r\
-Example : nogratz\n\r\
-Short(s): \n\r\
-Turns off the GRATZ channel.  To turn it back on, send a proper \
-GRATZ command.
-
-NOGREET=\
-Command : NOGREET\n\r\
-Usage   : NOGREET\n\r\
-Example : nogreet\n\r\
-Short(s): \n\r\
-Turns off the GREET channel.  To turn it back on, send a proper \
-GREET command.
-
-NOGOSSIP=\
-Command : NOGOSSIP\n\r\
-Usage   : NOGOSSIP\n\r\
-Example : nogossip\n\r\
-Short(s): \n\r\
-Turns off the GOSSIP channel.  To turn it back on, send a proper \
-GOSSIP command.
 
 NOMXP=\
 Command : NOMXP\n\r\
